# TPLPL

./: README.md  logic-lang.cabal  stack.yaml  tplpl.cabal
lib/: core.ll  core.tplpl  lambda_calc.tplpl  queue.tplpl  test.tplpl
src/: Data.hs  Lexer.x  Main.hs  Parser.hs  Query.hs  Unify.hs
