name:                logic-lang
version:             0.1.0.0
synopsis:            A simple implementation of logic language.
-- description:
-- homepage:            https://github.com/lambda-11235/lambda-calc
license:             BSD3
--license-file:        LICENSE
author:              Taran Lynn
maintainer:          taranlynn0@gmail.com
copyright:           2017 Taran Lynn
category:            Math
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.24

executable logic-lang
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Data, Unify, Query, Lexer, Parser
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, parsec, containers, array
  build-tools:         alex
  default-language:    Haskell2010

--source-repository head
--  type:     git
--  location: https://github.com/lambda-11235/lambda-calc
